Trac: Fix text overlap on mobile.
Props varshil151189.
Fixes: #6436.

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@12026 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/trac/wp-trac.css
+++ b/wordpress.org/public_html/style/trac/wp-trac.css
@@ -2387,6 +2387,7 @@ a.mention.me {
 	}
 	#attachments > div.attachments > p {
 		float: none;
+		position: unset;
 	}
 	#prefs {
 		position: static !important;
